--- a/OrdersDashboard/Pages/Dashboard.razor
+++ b/OrdersDashboard/Pages/Dashboard.razor
@@ -208,6 +208,15 @@
         height: 140px;
     }
 
+    e-chart {
+        width: inherit !important;
+        height: inherit !important;
+    }
+
+    .e-accumulationchart {
+        width: inherit !important;
+        height: inherit !important;
+    } 
 
     @@media screen and (min-width: 640px) {
         .content {
