--- a/OrdersDashboard/wwwroot/css/style.scss
+++ b/OrdersDashboard/wwwroot/css/style.scss
@@ -1,6 +1,6 @@
 ﻿body {
 
-    $body-back: crimson;
+   /* $body-back: crimson;
 
-    background-color: $body-back;
+    background-color: $body-back;*/
 }
