--- a/OrdersDashboard/Shared/NavMenu.razor
+++ b/OrdersDashboard/Shared/NavMenu.razor
@@ -1,7 +1,7 @@
 ﻿
 <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-primary border-bottom box-shadow mb-3">
     <div class="container">
-        <a class="navbar-brand text-light" asp-area="" asp-page="/Index">My application</a>
+        <a class="navbar-brand text-light" asp-area="" asp-page="/Index">Orders dashboard</a>
         <button class="navbar-toggler" @onclick="ToggleNavMenu" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                 aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -30,7 +30,7 @@
     }
 
     .bg-primary {
-        background: #557291 !important
+        background:#072263 !important
     }
 
     nav {
