--- a/OrdersDashboard/Pages/Dashboard.razor
+++ b/OrdersDashboard/Pages/Dashboard.razor
@@ -43,7 +43,7 @@
             <SfChart Height="100%">
                 <ChartPrimaryXAxis ValueType="Syncfusion.Blazor.Charts.ValueType.Category"></ChartPrimaryXAxis>
                 <ChartSeriesCollection>
-                    <ChartSeries DataSource="@SalesByCountries" XName="CountryName" YName="CountrySum" ColumnSpacing="0.2" ColumnWidth="0.7" 
+                    <ChartSeries DataSource="@SalesByCountries" XName="CountryName" YName="CountrySum" ColumnSpacing="0.2" ColumnWidth="0.7"
                                  Type="ChartSeriesType.Bar">
                     </ChartSeries>
                 </ChartSeriesCollection>
@@ -69,7 +69,7 @@
             </SfChart>
         </div>
     </div>
-    <div class="bars">
+    @*<div class="bars">
         <div class="item pie">
             <SfAccumulationChart Title="ORDERS BY COUNTRIES" EnableBorderOnMouseMove="true">
                 <AccumulationChartSeriesCollection>
@@ -93,13 +93,13 @@
                 <SfChart Height="100%">
                     <ChartPrimaryXAxis ValueType="Syncfusion.Blazor.Charts.ValueType.Category"></ChartPrimaryXAxis>
                     <ChartSeriesCollection>
-                        <ChartSeries DataSource="@SalesByCountries" XName="CountryName" YName="CountrySum" ColumnSpacing="0.2" ColumnWidth="0.7" 
+                        <ChartSeries DataSource="@SalesByCountries" XName="CountryName" YName="CountrySum" ColumnSpacing="0.2" ColumnWidth="0.7"
                                      Type="ChartSeriesType.Spline">
                         </ChartSeries>
                     </ChartSeriesCollection>
                 </SfChart>
             </div>
-        </div>
+        </div>*@
 </div>
 <style>
     .image-info {
@@ -172,7 +172,7 @@
 
     .cards {
         display: grid;
-        grid-template-columns: 1fr;
+        grid-template-columns: 1fr 1fr;
         grid-gap: 6px;
     }
 
