--- a/OrdersDashboard/Pages/Dashboard.razor
+++ b/OrdersDashboard/Pages/Dashboard.razor
@@ -69,7 +69,7 @@
             </SfChart>
         </div>
     </div>
-    @*<div class="bars">
+    <div class="bars">
         <div class="item pie">
             <SfAccumulationChart Title="ORDERS BY COUNTRIES" EnableBorderOnMouseMove="true">
                 <AccumulationChartSeriesCollection>
@@ -78,28 +78,28 @@
                 </AccumulationChartSeriesCollection>
             </SfAccumulationChart>
         </div>
-            <div class="item pie">
-                <SfAccumulationChart Title="SALES BY COUNTRIES">
-                    <AccumulationChartSeriesCollection>
-                        <AccumulationChartSeries DataSource="@SalesByCountries" XName="CountryName" YName="CountrySum" Name="Sales" Explode="true">
-                            <AccumulationDataLabelSettings Name="Text" Visible="true" Position="AccumulationLabelPosition.Outside">
-                                <AccumulationChartConnector Length="20px" Type="ConnectorType.Curve"></AccumulationChartConnector>
-                            </AccumulationDataLabelSettings>
-                        </AccumulationChartSeries>
-                    </AccumulationChartSeriesCollection>
-                </SfAccumulationChart>
-            </div>
-            <div class="item bar">
-                <SfChart Height="100%">
-                    <ChartPrimaryXAxis ValueType="Syncfusion.Blazor.Charts.ValueType.Category"></ChartPrimaryXAxis>
-                    <ChartSeriesCollection>
-                        <ChartSeries DataSource="@SalesByCountries" XName="CountryName" YName="CountrySum" ColumnSpacing="0.2" ColumnWidth="0.7"
-                                     Type="ChartSeriesType.Spline">
-                        </ChartSeries>
-                    </ChartSeriesCollection>
-                </SfChart>
-            </div>
+        <div class="item pie">
+            <SfAccumulationChart Title="SALES BY COUNTRIES">
+                <AccumulationChartSeriesCollection>
+                    <AccumulationChartSeries DataSource="@SalesByCountries" XName="CountryName" YName="CountrySum" Name="Sales" Explode="true">
+                        <AccumulationDataLabelSettings Name="Text" Visible="true" Position="AccumulationLabelPosition.Outside">
+                            <AccumulationChartConnector Length="20px" Type="ConnectorType.Curve"></AccumulationChartConnector>
+                        </AccumulationDataLabelSettings>
+                    </AccumulationChartSeries>
+                </AccumulationChartSeriesCollection>
+            </SfAccumulationChart>
+        </div>
+        @*<div class="item bar">
+            <SfChart Height="100%">
+                <ChartPrimaryXAxis ValueType="Syncfusion.Blazor.Charts.ValueType.Category"></ChartPrimaryXAxis>
+                <ChartSeriesCollection>
+                    <ChartSeries DataSource="@SalesByCountries" XName="CountryName" YName="CountrySum" ColumnSpacing="0.2" ColumnWidth="0.7"
+                                 Type="ChartSeriesType.Bar">
+                    </ChartSeries>
+                </ChartSeriesCollection>
+            </SfChart>
         </div>*@
+    </div>
 </div>
 <style>
     .image-info {
@@ -184,6 +184,7 @@
 
     .bars {
         display: grid;
+        grid-template-columns: 1fr;
         grid-gap: 6px;
     }
 
