--- a/OrdersDashboard/Pages/Dashboard.razor
+++ b/OrdersDashboard/Pages/Dashboard.razor
@@ -39,16 +39,6 @@
         </div>
     </div>
     <div class="pies">
-        <div class="item bar">
-            <SfChart Height="100%">
-                <ChartPrimaryXAxis ValueType="Syncfusion.Blazor.Charts.ValueType.Category"></ChartPrimaryXAxis>
-                <ChartSeriesCollection>
-                    <ChartSeries DataSource="@SalesByCountries" XName="CountryName" YName="CountrySum" ColumnSpacing="0.2" ColumnWidth="0.7"
-                                 Type="ChartSeriesType.Bar">
-                    </ChartSeries>
-                </ChartSeriesCollection>
-            </SfChart>
-        </div>
         <div class="item pie">
             <SfAccumulationChart Height="100%" Title="ORDERS BY COUNTRIES" EnableBorderOnMouseMove="true" EnableAnimation="true" EnableCanvas="true">
                 <AccumulationChartSeriesCollection>
@@ -59,17 +49,6 @@
                 </AccumulationChartLegendSettings>
             </SfAccumulationChart>
         </div>
-        <div class="item bar">
-            <SfChart Height="100%">
-                <ChartPrimaryXAxis ValueType="Syncfusion.Blazor.Charts.ValueType.Category"></ChartPrimaryXAxis>
-                <ChartSeriesCollection>
-                    <ChartSeries DataSource="@SalesByCountries" XName="CountryName" YName="CountrySum" ColumnSpacing="0.2" ColumnWidth="0.7" Type="ChartSeriesType.Bar">
-                    </ChartSeries>
-                </ChartSeriesCollection>
-            </SfChart>
-        </div>
-    </div>
-    <div class="bars">
         <div class="item pie">
             <SfAccumulationChart Title="ORDERS BY COUNTRIES" EnableBorderOnMouseMove="true">
                 <AccumulationChartSeriesCollection>
@@ -89,7 +68,9 @@
                 </AccumulationChartSeriesCollection>
             </SfAccumulationChart>
         </div>
-        @*<div class="item bar">
+    </div>
+    @*<div class="bars">
+        <div class="item bar">
             <SfChart Height="100%">
                 <ChartPrimaryXAxis ValueType="Syncfusion.Blazor.Charts.ValueType.Category"></ChartPrimaryXAxis>
                 <ChartSeriesCollection>
@@ -98,8 +79,26 @@
                     </ChartSeries>
                 </ChartSeriesCollection>
             </SfChart>
-        </div>*@
-    </div>
+        </div>
+        <div class="item bar">
+            <SfChart Height="100%">
+                <ChartPrimaryXAxis ValueType="Syncfusion.Blazor.Charts.ValueType.Category"></ChartPrimaryXAxis>
+                <ChartSeriesCollection>
+                    <ChartSeries DataSource="@SalesByCountries" XName="CountryName" YName="CountrySum" ColumnSpacing="0.2" ColumnWidth="0.7" Type="ChartSeriesType.Bar">
+                    </ChartSeries>
+                </ChartSeriesCollection>
+            </SfChart>
+        </div>
+        <div class="item bar">
+            <SfChart Height="100%">
+                <ChartPrimaryXAxis ValueType="Syncfusion.Blazor.Charts.ValueType.Category"></ChartPrimaryXAxis>
+                <ChartSeriesCollection>
+                    <ChartSeries DataSource="@SalesByCountries" XName="CountryName" YName="CountrySum" ColumnSpacing="0.2" ColumnWidth="0.7" Type="ChartSeriesType.Bar">
+                    </ChartSeries>
+                </ChartSeriesCollection>
+            </SfChart>
+        </div>
+    </div>*@
 </div>
 <style>
     .image-info {
@@ -146,15 +145,17 @@
         text-align: right;
     }
     /*Конец - Внутренние классы компонента SfCard*/
-        .item {
-            /*padding:0;*/
-        }
-    .px-4 {
-        padding-left: 0!important;
-        padding-right: 0!important;
+    .item {
+        /*padding:0;*/
     }
-    .content{
-        padding-top:0!important;
+
+    .px-4 {
+        padding-left: 0 !important;
+        padding-right: 0 !important;
+    }
+
+    .content {
+        padding-top: 0 !important;
     }
 
     * {
@@ -164,7 +165,7 @@
 
     .wrapper {
         display: grid;
-        grid-template-rows:.5fr 2fr 2fr;
+        grid-template-rows: .5fr 2fr 2fr;
         padding: 0px;
         margin: 0px;
         grid-gap: 6px;
@@ -228,7 +229,7 @@
     .e-accumulationchart {
         width: inherit !important;
         height: inherit !important;
-    } 
+    }
 
     @@media screen and (min-width: 640px) {
         .content {
