--- a/OrdersDashboard/Pages/Dashboard.razor
+++ b/OrdersDashboard/Pages/Dashboard.razor
@@ -165,9 +165,9 @@
 
     .wrapper {
         display: grid;
-        grid-template-rows: .5fr 2fr 2fr;
+        /*grid-template-rows: 4fr 3fr 3fr;*/
         padding: 0px;
-        margin: 0px;
+        margin: 6px;
         grid-gap: 6px;
     }
 
@@ -233,7 +233,7 @@
 
     @@media screen and (min-width: 640px) {
         .content {
-            /*padding-top: 1.1em !important;*/
+            padding-top: 1.1em !important;
         }
 
         .cards {
@@ -247,11 +247,6 @@
             grid-template-columns: 1fr 1fr 1fr;
             grid-gap: 6px;
         }
-
-        body {
-            /*font-size: 69%;*/
-        }
-
         .bars {
             display: grid;
             grid-template-columns: 1fr 1fr 1fr;
