--- a/OrdersDashboard/Pages/Dashboard.razor
+++ b/OrdersDashboard/Pages/Dashboard.razor
@@ -39,6 +39,8 @@
         </div>
     </div>
     <div class="pies">
+        @if (OrdersByCountries != null)
+        {
         <div class="item pie">
             <SfAccumulationChart Height="100%" Title="ORDERS BY COUNTRIES" EnableBorderOnMouseMove="true" EnableAnimation="true" EnableCanvas="true">
                 <AccumulationChartSeriesCollection>
@@ -57,6 +59,9 @@
                 </AccumulationChartSeriesCollection>
             </SfAccumulationChart>
         </div>
+        }
+        @if (SalesByCountries != null)
+        {
         <div class="item pie">
             <SfAccumulationChart Title="SALES BY COUNTRIES">
                 <AccumulationChartSeriesCollection>
@@ -68,6 +73,7 @@
                 </AccumulationChartSeriesCollection>
             </SfAccumulationChart>
         </div>
+        }
     </div>
     @*<div class="bars">
         <div class="item bar">
