--- a/OrdersDashboard/Shared/NavMenu.razor
+++ b/OrdersDashboard/Shared/NavMenu.razor
@@ -12,6 +12,9 @@
                     <a class="nav-link text-light" href="" Match="NavLinkMatch.All">Home</a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link text-light" href="diagramm">Diagramm</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link text-light" href="counter">Counter</a>
                 </li>
                 <li class="nav-item">
