--- a/OrdersDashboard/Pages/Diagramm.razor
+++ b/OrdersDashboard/Pages/Diagramm.razor
@@ -79,18 +79,27 @@
     }
 
     .pie {
-        border-radius: 10px;
+        border-radius: 0px;
         border: 1px solid #b9b8b8;
         color: black;
-        padding: 2px;
+        padding: 0px;
     }
 
     .cards{
         display:grid;
         grid-template-columns:1fr 1fr;
         gap:6px;
+        margin-bottom:6px;
     }
-
+    .item {
+        padding: 6px;
+        color: white;
+        box-shadow: 5px 6px 8px 1px rgb(0 0 0 / 25%);
+    }
+    .image-info {
+        max-height: 64px;
+        max-width: 64px;
+    }
     .card1 {
         background-color: #ff6a00
     }
