--- a/OrdersDashboard/Shared/NavMenu.razor
+++ b/OrdersDashboard/Shared/NavMenu.razor
@@ -11,9 +11,9 @@
                 <li class="nav-item">
                     <a class="nav-link text-light" href="" Match="NavLinkMatch.All">Home</a>
                 </li>
-                <li class="nav-item">
+                @*<li class="nav-item">
                     <a class="nav-link text-light" href="diagramm">Diagramm</a>
-                </li>
+                </li>*@
                 <li class="nav-item">
                     <a class="nav-link text-light" href="counter">Counter</a>
                 </li>
