--- a/OrdersDashboard/Pages/Diagramm.razor
+++ b/OrdersDashboard/Pages/Diagramm.razor
@@ -72,6 +72,12 @@
 </div>
 
 <style>
+/*    .wrapper {
+        padding: 0px;
+        margin: 6px;
+    }
+*/
+
 
     .pies {
         display: flex;
@@ -140,7 +146,7 @@
 
     .e-card .e-card-content {
         color: white;
-        font-size: 3em;
+        font-size: 2em;
         text-align: right;
         padding: 0;
     }
