--- a/OrdersDashboard/Shared/NavMenu.razor
+++ b/OrdersDashboard/Shared/NavMenu.razor
@@ -1,5 +1,5 @@
 ﻿
-<nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-primary border-bottom box-shadow mb-3">
+<nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-primary border-bottom box-shadow">
     <div class="container">
         <a class="navbar-brand text-light" asp-area="" asp-page="/Index">Orders dashboard</a>
         <button class="navbar-toggler" @onclick="ToggleNavMenu" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
@@ -38,7 +38,7 @@
 
     nav {
         position: relative;
-        top: 0;
+        top: 0px;
         right: 0;
         left: 0;
         z-index: 1030;
