--- a/OrdersDashboard/Shared/MainLayout.razor
+++ b/OrdersDashboard/Shared/MainLayout.razor
@@ -1,13 +1,14 @@
 ﻿@inherits LayoutComponentBase
 
 <div class="page">
-        <NavMenu />
+    <NavMenu />
     <div class="main">
         <div class="top-row px-4">
-            @*<a href="http://blazor.net" target="_blank" class="ml-md-auto">About</a>*@
+            <a href="http://blazor.net" target="_blank" class="ml-md-auto">About</a>
         </div>
 
-        <div class="content px-4">
+        @*<div class="content px-4">*@
+        <div class="content">
             @Body
         </div>
     </div>
