--- a/OrdersDashboard/wwwroot/css/app.css
+++ b/OrdersDashboard/wwwroot/css/app.css
@@ -15,7 +15,8 @@ a, .btn-link {
 }
 
 .content {
-    padding-top: 1.1rem;
+    /*padding-top: 1.1rem;*/
+    padding:0.4rem;
 }
 
 .valid.modified:not([type=checkbox]) {
