--- a/OrdersDashboard/Pages/Dashboard.razor
+++ b/OrdersDashboard/Pages/Dashboard.razor
@@ -277,8 +277,8 @@
 
         OrdersByCountries = ordersByCountriesResponce.Data;
 
-        var salesByCountries = await statisticService.GetSalesByCountriesAsync();
-        SalesByCountries = salesByCountries.Data;
+        //var salesByCountries = await statisticService.GetSalesByCategorysAsync();
+        //SalesByCountries = salesByCountries.Data;
     }
     #endregion
 }
